--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
-    "shadow-cljs": "^2.3.22"
+    "shadow-cljs": "^2.11.5"
+  },
+  "dependencies": {
+    "p5": "^1.1.9"
   }
 }
